hphp/test/zend/bad/tests/classes/type_hinting_001.php.expectf
Catchable fatal error: Argument 1 passed to FooBar::a() must implement interface Foo, instance of Blort given, called in %s on line 27 and defined in %s on line 12